--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+nav a.active{
+    background-color: transparent !important;
+    color: #3b82f6 !important;
+    padding-bottom: 3px;
+    border-radius: 0%;
+    border-bottom: 2px solid #3b82f6;
+}
+nav ul a:hover{
+    color: #1d4ed8;
+    background-color: transparent !important;
+}
